[project]
name = "orbit"
version = "0.1.0"
description = "A high-performance distributed task orchestration API"
authors = [
    {name = "Steve Dev", email = "steve@example.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.109.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.7",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbit"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "UP"]
