# ============================================
# PROJECT METADATA
# ============================================
[project]
name = "orbit"
version = "1.0.0"
description = "Production-ready workflow orchestration system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Orbit Team", email = "team@orbit.dev"}
]
keywords = ["workflow", "orchestration", "dag", "scheduler", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ============================================
# RUNTIME DEPENDENCIES
# These are installed when you run: pip install -e .
# ============================================
dependencies = [
    # Web Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # Database & ORM
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",        # PostgreSQL async driver
    "aiosqlite>=0.19.0",      # SQLite async driver
    
    # Data Validation
    "pydantic>=2.5.0",
    
    # Scheduling
    "croniter>=2.0.0",
    "apscheduler>=3.10.0",
    
    # Security & Encryption
    "cryptography>=41.0.0",
    
    # Monitoring & Metrics
    "prometheus-client>=0.19.0",
    
    # HTTP Client
    "httpx>=0.25.0",
]

# ============================================
# DEVELOPMENT DEPENDENCIES
# These are installed when you run: pip install -e ".[dev]"
# ============================================
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code Quality
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    
    # Development Tools
    "ipython>=8.18.0",
    "ipdb>=0.13.13",
]

# Production extras (optional)
prod = [
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
]

# All extras
all = [
    "orbit[dev,prod]",
]

# ============================================
# PROJECT URLs
# ============================================
[project.urls]
Homepage = "https://github.com/yourusername/orbit"
Documentation = "https://orbit.readthedocs.io"
Repository = "https://github.com/yourusername/orbit"
Issues = "https://github.com/yourusername/orbit/issues"

# ============================================
# BUILD SYSTEM
# Tells pip how to install this package
# ============================================
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================
# SETUPTOOLS CONFIGURATION
# ============================================
[tool.setuptools]
packages = ["orbit"]

[tool.setuptools.package-data]
orbit = ["py.typed"]

# ============================================
# PYTEST CONFIGURATION
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================
# BLACK (Code Formatter)
# ============================================
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

# ============================================
# MYPY (Type Checker)
# ============================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ============================================
# RUFF (Linter & Formatter)
# ============================================
[tool.ruff]
line-length = 88
target-version = "py310"

# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults (FastAPI pattern)
    "UP007", # Use X | Y for type annotations (not compatible with Python 3.9)
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*" = ["S101"]      # Allow assert in tests

[tool.ruff.isort]
known-first-party = ["orbit"]

# ============================================
# COVERAGE (Test Coverage)
# ============================================
[tool.coverage.run]
source = ["orbit"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
